# hpy-framework

./: .gitignore  LICENSE  README.md  hpy_tool.py  pyproject.toml  setup.py
docs/: cli-usage.html  cli_usage.html  configuration.html  getting-started.html  getting_started.html  hpy-files.html  hpy.toml  hpy_files.html  index.html  static-assets.html  static_assests.html
docs/dists/: cli_usage.html  configuration.html  getting_started.html  hpy_files.html  index.html  static_assests.html
docs/src/: _layout.hpy  cli_usage.hpy  configuration.hpy  getting-started.hpy  hpy-files.hpy  hpy_files.hpy  index.hpy  static-assets.hpy
docs/src/static/: docs.css
docs/static/: docs.css
docs_site/: cli_usage.html  configuration.html
examples/: hello_world.hpy
examples/layout example/src/: _layout.hpy  about.hpy  index.hpy
examples/new layout example/: hpy.toml
examples/new layout example/src/: _layout.hpy  about.hpy  index.hpy
examples/new single file example/: app.hpy
hpy_core/: building.py  cli.py  components.py  config.py  init.py  parsing.py  serving.py  watching.py
hpy_core/project_templates/: app_shell.html.template  blank_layout_for_shell.hpy.template  component_card.hpy.template  hpy.toml.template  layout_for_shell.hpy.template  logo.svg.template  main.css.template  page_about.hpy.template  page_index.hpy.template  script_about.py.template  script_index.py.template  single_file_app.hpy.template
tests/: test_app_shell.py  test_building.py  test_cli.py  test_watching.py
