# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpy-tool"
# Sync version with hpy_core/config.py
version = "0.8.1" # Updated Version for App Shell + Init Refactor
authors = [
  { name="xdmanus", email="xdmanus.dev@gmail.com" },
]
description = "A tool to build/serve web apps from .hpy files/dirs using Brython."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License", # Standardized SPDX identifier
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    'tomli >= 1.1.0',
    'watchfiles >= 0.18',
    'typer[all] >= 0.9.0' # Or latest; [all] installs rich for pretty printing
]

[project.scripts]
hpy = "hpy_core.cli:main"

# --- NEW SECTION FOR PACKAGING TEMPLATE FILES ---
[tool.setuptools.package-data]
hpy_core = ["project_templates/*.*"]
# --- END NEW SECTION ---